fix colors in dark mode

--- a/src/css/notification.css
+++ b/src/css/notification.css
@@ -18,7 +18,7 @@
 
   font-size: 14px;
   line-height: 18px;
-  color: var(--steel-800);
+  color: var(--notification-text);
   transition: top 0.5s cubic-bezier(0.22, 0.61, 0.36, 1),
     opacity 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
 
